<resources>
    <string name="app_name">First App</string>
    <string name="todo">TODO</string>
    <string name="welcome">WELCOME</string>
    <string name="this_is_my_first_application">This is my First Application</string>
    <string name="tj">-TJ</string>
    <string name="Continue">Continue</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_password">Create password</string>
    <string name="password">Password</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="email">Email</string>
    <string name="sign_up">SIGN-UP</string>
    <string name="confirm_password_final">Confirm password</string>
    <string name="sign_up_">Sign up</string>
    <string name="Start">Start</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_an_account">Don’t have an Account ?</string>
    <string name="start">Start</string>
    <string name="abcd_gmail_com">abc@gmail.com</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="confirm_password_">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="login">Login</string>
</resources>