<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotationX="-1"
    tools:context=".MainActivity3">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="477dp"
        android:layout_height="676dp"
        android:layout_marginBottom="372dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/vector_2" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="537dp"
        android:layout_height="634dp"
        android:layout_marginBottom="288dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/texture" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="SIGN-IN"
        android:textColor="@color/color_979494"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <View
        android:id="@+id/view"
        android:layout_width="104dp"
        android:layout_height="3dp"
        android:layout_marginStart="24dp"
        android:background="#FF8383"
        android:backgroundTint="@color/color_ff8383"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <EditText
        android:id="@+id/editTextemail"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawableTint="@color/gray"
        android:ems="10"
        android:hint=" abc@gmail.com"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/password"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawableEnd="@drawable/outline_password_24"
        android:drawableTint="@color/gray"
        android:ems="10"
        android:hint=" Enter Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/color_9e9e9e"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <Button
        android:id="@+id/buttonsignin"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF8383"
        android:fontFamily="@font/rubik_semibold"
        android:text="Sign in"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="66dp"
        android:layout_height="26dp"
        android:fontFamily="@font/rubik_medium"
        android:text="Sign up"
        android:textColor="@color/color_ff8383"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.758"
        tools:ignore="OnClick" />


</androidx.constraintlayout.widget.ConstraintLayout>